Bug Fix Form navigation Mobile style adjustment

--- a/src/components/Tasks/style.css
+++ b/src/components/Tasks/style.css
@@ -18,8 +18,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     min-height: 500px;
-    /* padding-top: 1rem; */
-    padding-bottom: 2rem;
+    padding: 0.5rem;
 }
 
 
